# segmentors-backbones-optimization

./: .gitignore  README.md  analyze_bestch_vs_fused.py  analyze_bestch_vs_fused_v3.py  analyze_navier_logs.py  analyze_optimization_surfaces.py  analyze_optimization_surfaces_codex.py  analyze_parameter_shift_report.py  analyze_parameter_shifts_3d.py  analyze_parameter_shifts_solid_3d.py  analyze_parameter_shifts_solid_3d_codex.py  build_nav_dataset.py  build_parameter_shift_manifold_geometry.py  build_solid_3d_and_manifold_plots_representative_plus.py  check_leaf_params_transfer_to_patches.py  collect_leaf_tapes_report.csv  cpu_job.sub  eval_teacher_student.py  extractor.py  fast_segmentors.py  infer_unet_patchify.py  infer_unet_patchify_cli.py  instrument_full_optimizer_traces_representative_9leaf.py  make_disagreement_montage.py  make_many_patch_montages.py  make_montage_patch_transfer.py  make_paper_montage.py  make_teacher_student_figures.py  multitask_infer_new.py  multitask_infer_v2.py  multitask_lesion_model.py  navier.py  navier_2.py  navier_best_energy.py  navier_best_energy_auto.py  navier_best_energy_auto_tiled.py  navier_bestch_opt.py  navier_fused.py  navier_fused_auto.py  navier_fused_auto_tiled.py  (+58 more)
18.7/: DSC_0047_segment_1_segmented_smoothed.tif
Paper1_Optimization/: paper1.aux  paper1.out  paper1.tex
Paper2_Distillation/: paper2.aux  paper2.out  paper2.tex
Paper_3/: Latest_Paper_1.aux  Latest_Paper_1.blg  Latest_Paper_1.fdb_latexmk  Latest_Paper_1.fls  Latest_Paper_1.out  Latest_Paper_1.tex  Latest_paper.aux  Latest_paper.blg  Latest_paper.tex  (+20 more)
(+317 files in other folders)
