[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "segmentors-backbones-optimization"
version = "0.1.0"
description = "Physics-based lesion segmentation with Navier-Stokes active contours, stochastic parameter optimization, and selective semi-amortized inference for plant phenotyping."
authors = [
    {name = "Chimdi Walter Ndubuisi"},
    {name = "Toni Kazic"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["plant phenotyping", "lesion segmentation", "active contours", "navier-stokes", "stochastic optimization"]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "Pillow>=10.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "opencv-python>=4.8",
    "fpdf2>=2.7",
    "pandas>=2.0",
    "umap-learn>=0.5",
    "tqdm>=4.65",
]

[tool.setuptools.packages.find]
where = ["."]
